--- a/TSBridge/TSBridge/TSBridge.csproj
+++ b/TSBridge/TSBridge/TSBridge.csproj
@@ -95,9 +95,12 @@
     <Compile Include="Api\ITypeScriptLanguageService.cs" />
     <Compile Include="Api\Meta\JSBindingAttribute.cs" />
     <Compile Include="Api\TypeScriptLanguageService.cs" />
+    <Compile Include="Ast\Declaration.cs" />
     <Compile Include="Ast\Enumerations.cs" />
     <Compile Include="Ast\Node.cs" />
+    <Compile Include="Ast\NodeArray.cs" />
     <Compile Include="Ast\Statement.cs" />
+    <Compile Include="Ast\TextRange.cs" />
     <Compile Include="Ast\Token.cs" />
     <Compile Include="Ast\TypeScriptSyntaxTree.cs" />
     <Compile Include="ByteOrderMark.cs" />
