--- a/TSBridge/TSBridge/TSBridge.csproj
+++ b/TSBridge/TSBridge/TSBridge.csproj
@@ -96,11 +96,24 @@
     <Compile Include="Api\Meta\JSBindingAttribute.cs" />
     <Compile Include="Api\TypeScriptLanguageService.cs" />
     <Compile Include="Ast\Declaration.cs" />
+    <Compile Include="Ast\IDeclaration.cs" />
     <Compile Include="Ast\Enumerations.cs" />
+    <Compile Include="Ast\Identifier.cs" />
+    <Compile Include="Ast\IExpression.cs" />
+    <Compile Include="Ast\IIdentifier.cs" />
+    <Compile Include="Ast\IIncrementExpression.cs" />
+    <Compile Include="Ast\ILeftHandSideExpression.cs" />
+    <Compile Include="Ast\IMemberExpression.cs" />
+    <Compile Include="Ast\INode.cs" />
+    <Compile Include="Ast\IPrimaryExpression.cs" />
+    <Compile Include="Ast\IUnaryExpression.cs" />
     <Compile Include="Ast\Node.cs" />
     <Compile Include="Ast\NodeArray.cs" />
+    <Compile Include="Ast\IStatement.cs" />
     <Compile Include="Ast\Statement.cs" />
-    <Compile Include="Ast\TextRange.cs" />
+    <Compile Include="Ast\Statements\ClassDeclaration.cs" />
+    <Compile Include="Ast\Statements\IDeclarationStatement.cs" />
+    <Compile Include="Ast\ITextRange.cs" />
     <Compile Include="Ast\Token.cs" />
     <Compile Include="Ast\TypeScriptSyntaxTree.cs" />
     <Compile Include="ByteOrderMark.cs" />
