--- a/TSBridge/TSBridge/TSBridge.csproj
+++ b/TSBridge/TSBridge/TSBridge.csproj
@@ -96,6 +96,8 @@
     <Compile Include="Api\Meta\JSBindingAttribute.cs" />
     <Compile Include="Api\TypeScriptLanguageService.cs" />
     <Compile Include="Ast\Declaration.cs" />
+    <Compile Include="Ast\Deserialization\AstStatementConverter.cs" />
+    <Compile Include="Ast\Deserialization\JsonCreationConverter.cs" />
     <Compile Include="Ast\IDeclaration.cs" />
     <Compile Include="Ast\Enumerations.cs" />
     <Compile Include="Ast\Identifier.cs" />
