--- a/TSBridge/TSBridge/TSBridge.csproj
+++ b/TSBridge/TSBridge/TSBridge.csproj
@@ -95,11 +95,15 @@
     <Compile Include="Api\ITypeScriptLanguageService.cs" />
     <Compile Include="Api\Meta\JSBindingAttribute.cs" />
     <Compile Include="Api\TypeScriptLanguageService.cs" />
+    <Compile Include="Ast\ClassLikeDeclaration.cs" />
     <Compile Include="Ast\Declaration.cs" />
+    <Compile Include="Ast\Deserialization\AstConverter.cs" />
     <Compile Include="Ast\Deserialization\AstStatementConverter.cs" />
     <Compile Include="Ast\Deserialization\JsonCreationConverter.cs" />
+    <Compile Include="Ast\IClassLikeDeclaration.cs" />
     <Compile Include="Ast\IDeclaration.cs" />
     <Compile Include="Ast\Enumerations.cs" />
+    <Compile Include="Ast\IDeclarationStatement.cs" />
     <Compile Include="Ast\Identifier.cs" />
     <Compile Include="Ast\IExpression.cs" />
     <Compile Include="Ast\IIdentifier.cs" />
