--- a/TSBridge/TSBridge/TSBridge.csproj
+++ b/TSBridge/TSBridge/TSBridge.csproj
@@ -78,21 +78,22 @@
     <Compile Include="Api\ITypeScriptLanguageService.cs" />
     <Compile Include="Api\Meta\JSBindingAttribute.cs" />
     <Compile Include="Api\TypeScriptLanguageService.cs" />
-    <Compile Include="Ast\ClassElement.cs" />
+    <Compile Include="Ast\SubNodes\ClassElements\ClassElement.cs" />
+    <Compile Include="Ast\Deserialization\ClassElementConverter.cs" />
     <Compile Include="Ast\IClassElement.cs" />
-    <Compile Include="Ast\ClassLikeDeclaration.cs" />
-    <Compile Include="Ast\Declaration.cs" />
+    <Compile Include="Ast\SubNodes\Declarations\ClassLikeDeclaration.cs" />
+    <Compile Include="Ast\SubNodes\Declarations\Declaration.cs" />
     <Compile Include="Ast\Deserialization\AstConverter.cs" />
     <Compile Include="Ast\Deserialization\AstStatementConverter.cs" />
     <Compile Include="Ast\Deserialization\IdentifierConverter.cs" />
     <Compile Include="Ast\Deserialization\JsonCreationConverter.cs" />
     <Compile Include="Ast\Diagnostics\Diagnostic.cs" />
-    <Compile Include="Ast\FunctionLikeDeclaration.cs" />
-    <Compile Include="Ast\IFunctionLikeDeclaration.cs" />
-    <Compile Include="Ast\IClassLikeDeclaration.cs" />
-    <Compile Include="Ast\IDeclaration.cs" />
+    <Compile Include="Ast\SubNodes\Declarations\FunctionLikeDeclaration.cs" />
+    <Compile Include="Ast\SubNodes\Declarations\IFunctionLikeDeclaration.cs" />
+    <Compile Include="Ast\SubNodes\Declarations\IClassLikeDeclaration.cs" />
+    <Compile Include="Ast\SubNodes\Declarations\IDeclaration.cs" />
     <Compile Include="Ast\Enumerations.cs" />
-    <Compile Include="Ast\IDeclarationStatement.cs" />
+    <Compile Include="Ast\SubNodes\Declarations\IDeclarationStatement.cs" />
     <Compile Include="Ast\Identifier.cs" />
     <Compile Include="Ast\IExpression.cs" />
     <Compile Include="Ast\IIdentifier.cs" />
@@ -105,14 +106,14 @@
     <Compile Include="Ast\Node.cs" />
     <Compile Include="Ast\NodeArray.cs" />
     <Compile Include="Ast\IStatement.cs" />
-    <Compile Include="Ast\PropertyDeclaration.cs" />
-    <Compile Include="Ast\PropertyName.cs" />
     <Compile Include="Ast\Statement.cs" />
     <Compile Include="Ast\Statements\FunctionDeclaration.cs" />
     <Compile Include="Ast\Statements\ClassDeclaration.cs" />
     <Compile Include="Ast\Statements\DeclarationStatement.cs" />
     <Compile Include="Ast\Statements\IDeclarationStatement.cs" />
     <Compile Include="Ast\ITextRange.cs" />
+    <Compile Include="Ast\SubNodes\ClassElements\ConstructorDeclaration.cs" />
+    <Compile Include="Ast\SubNodes\ClassElements\MethodDeclaration.cs" />
     <Compile Include="Ast\Token.cs" />
     <Compile Include="Ast\TypeScriptSyntaxTree.cs" />
     <Compile Include="ByteOrderMark.cs" />
