use interface for blocks

--- a/TSBridge/TSBridge/TSBridge.csproj
+++ b/TSBridge/TSBridge/TSBridge.csproj
@@ -114,8 +114,9 @@
     <Compile Include="Ast\ITextRange.cs" />
     <Compile Include="Ast\SubNodes\ClassElements\ConstructorDeclaration.cs" />
     <Compile Include="Ast\SubNodes\ClassElements\MethodDeclaration.cs" />
-    <Compile Include="Ast\SubNodes\Organization\Block.cs" />
     <Compile Include="Ast\SubNodes\Organization\BlockOrExpression.cs" />
+    <Compile Include="Ast\SubNodes\Organization\IBlock.cs" />
+    <Compile Include="Ast\SubNodes\Organization\IBlockOrExpression.cs" />
     <Compile Include="Ast\Token.cs" />
     <Compile Include="Ast\TypeScriptSyntaxTree.cs" />
     <Compile Include="ByteOrderMark.cs" />
