--- a/TSBridge/TSBridge/TSBridge.csproj
+++ b/TSBridge/TSBridge/TSBridge.csproj
@@ -1,172 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90FCC510-9E0A-4781-A3B6-22CC089029B5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TSBridge</RootNamespace>
-    <AssemblyName>TSBridge</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="IridiumJS, Version=1.0.0.0, Culture=neutral, PublicKeyToken=2e92ba9c8d81157f, processorArchitecture=MSIL">
-      <HintPath>..\packages\IridiumJS.2.10.3\lib\net45\IridiumJS.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)packages\Newtonsoft.Json.9.0.2-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Diagnostics.Contracts" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Api\ITypeScriptLanguageService.cs" />
-    <Compile Include="Api\Meta\JSBindingAttribute.cs" />
-    <Compile Include="Api\TypeScriptLanguageService.cs" />
-    <Compile Include="Ast\BaseExpression.cs" />
-    <Compile Include="Ast\Deserialization\ExpressionConverter.cs" />
-    <Compile Include="Ast\Statements\ExpressionStatement.cs" />
-    <Compile Include="Ast\Statements\ReturnStatement.cs" />
-    <Compile Include="Ast\Statements\VariableStatement.cs" />
-    <Compile Include="Ast\SubNodes\ClassElements\ClassElement.cs" />
-    <Compile Include="Ast\Deserialization\ClassElementConverter.cs" />
-    <Compile Include="Ast\IClassElement.cs" />
-    <Compile Include="Ast\SubNodes\Declarations\ClassLikeDeclaration.cs" />
-    <Compile Include="Ast\SubNodes\Declarations\Declaration.cs" />
-    <Compile Include="Ast\Deserialization\AstConverter.cs" />
-    <Compile Include="Ast\Deserialization\AstStatementConverter.cs" />
-    <Compile Include="Ast\Deserialization\IdentifierConverter.cs" />
-    <Compile Include="Ast\Deserialization\JsonCreationConverter.cs" />
-    <Compile Include="Ast\Diagnostics\Diagnostic.cs" />
-    <Compile Include="Ast\SubNodes\Declarations\FunctionLikeDeclaration.cs" />
-    <Compile Include="Ast\SubNodes\Declarations\IFunctionLikeDeclaration.cs" />
-    <Compile Include="Ast\SubNodes\Declarations\IClassLikeDeclaration.cs" />
-    <Compile Include="Ast\SubNodes\Declarations\IDeclaration.cs" />
-    <Compile Include="Ast\Enumerations.cs" />
-    <Compile Include="Ast\SubNodes\Declarations\IDeclarationStatement.cs" />
-    <Compile Include="Ast\Identifier.cs" />
-    <Compile Include="Ast\IExpression.cs" />
-    <Compile Include="Ast\IIdentifier.cs" />
-    <Compile Include="Ast\IIncrementExpression.cs" />
-    <Compile Include="Ast\ILeftHandSideExpression.cs" />
-    <Compile Include="Ast\IMemberExpression.cs" />
-    <Compile Include="Ast\INode.cs" />
-    <Compile Include="Ast\IPrimaryExpression.cs" />
-    <Compile Include="Ast\IUnaryExpression.cs" />
-    <Compile Include="Ast\Node.cs" />
-    <Compile Include="Ast\NodeArray.cs" />
-    <Compile Include="Ast\IStatement.cs" />
-    <Compile Include="Ast\Statement.cs" />
-    <Compile Include="Ast\Statements\FunctionDeclaration.cs" />
-    <Compile Include="Ast\Statements\ClassDeclaration.cs" />
-    <Compile Include="Ast\Statements\DeclarationStatement.cs" />
-    <Compile Include="Ast\Statements\IDeclarationStatement.cs" />
-    <Compile Include="Ast\ITextRange.cs" />
-    <Compile Include="Ast\SubNodes\ClassElements\ConstructorDeclaration.cs" />
-    <Compile Include="Ast\SubNodes\ClassElements\MethodDeclaration.cs" />
-    <Compile Include="Ast\SubNodes\Declarations\VariableDeclaration.cs" />
-    <Compile Include="Ast\SubNodes\Organization\BlockOrExpression.cs" />
-    <Compile Include="Ast\SubNodes\Organization\IBlock.cs" />
-    <Compile Include="Ast\SubNodes\Organization\IBlockOrExpression.cs" />
-    <Compile Include="Ast\Token.cs" />
-    <Compile Include="Ast\TypeScriptSyntaxTree.cs" />
-    <Compile Include="Ast\VariableDeclarationList.cs" />
-    <Compile Include="ByteOrderMark.cs" />
-    <Compile Include="CompilerOptions.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="IReferenceResolverHost.cs" />
-    <Compile Include="IScriptSnapshot.cs" />
-    <Compile Include="ITextChangeRange.cs" />
-    <Compile Include="ITextSpan.cs" />
-    <Compile Include="LanguageService\CompletionEntry.cs" />
-    <Compile Include="LanguageService\CompletionInfo.cs" />
-    <Compile Include="LanguageService\TextSpan.cs" />
-    <Compile Include="LanguageVersion.cs" />
-    <Compile Include="ModuleGenTarget.cs" />
-    <Compile Include="NullLogger.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ILanguageServiceHost.cs" />
-    <Compile Include="Services\ILanguageServicesDiagnostics.cs" />
-    <Compile Include="Services\LanguageServiceHost.cs" />
-    <Compile Include="StringScriptSnapshot.cs" />
-    <Compile Include="TextUtilities.cs" />
-    <Compile Include="TypeScriptContext.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="JS\typescriptServices.js" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="TSDefs\lib.d.ts" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
